[tool.poetry]
name = "onnx-export"
version = "0.1.0"
description = ""
authors = ["Lucas Caraça <lucascaraca94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.2"
pandas = "^2.2.2"
jupyterlab = "^4.2.5"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
catboost = "^1.2.7"
onnxmltools = "^1.12.0"
onnxruntime = "^1.19.2"
skl2onnx = "^1.17.0"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
shap = "0.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
